# SportsShopPractice

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  structure.txt
.github/workflows/: ci.yml
sports_shop/: config.py  main.py  start.py
sports_shop/db/: init.sql
