[tool.ruff]
line-length = 120
extend-exclude = ["app/alembic/*"]

[tool.ruff.lint]
extend-select = ["E501", "I"]

[tool.poetry]
name = "sports_shop"
version = "0.1.0"
description = ""
authors = ["Mark Safin <samangelofw@gmail.com>"]
readme = "README.md"
packages = [{ include = "sports_shop" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
gunicorn = "^23.0.0"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.38"
greenlet = "^3.1.1"
pyproject-toml = "^0.0.12"
sentry-sdk = "^2.19.2"
aiomysql = "^0.2.0"
python-multipart = "^0.0.20"
aioftp = "^0.24.1"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pre-commit = "^4.0.1"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.2.0"
httpx = ">=0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "class"
asyncio_mode = "auto"
